# Options

./: .gitignore  CMakeLists.txt  OptHelp.h  Options.h  README.md  ex01_minimal_usage.cpp  ex02_default_value.cpp  ex03_several_options.cpp  ex04_option_list.cpp  ex04_print_help.cpp  ex05_help_option.cpp  ex06_option_switch.cpp  ex07_handle_help.cpp  ex08_chained_notation.cpp  ex09_tuple_of_options.cpp  ex10_appending_a_tuple_of_options.cpp  ex11_validity_check.cpp  ex12_advanced_validity_check.cpp  ex13_post-processing.cpp  ex1_minimal_usage.cpp  ex2_default_value.cpp  ex3_several_options.cpp  ex4_chained_notation.cpp  ex5_chained_notation_in_cctor_calls.cpp  ex5_tuple_of_options.cpp  ex6_appending_a_tuple_of_options.cpp  minimal_example.cpp  polymorphic.h  run_examples  test_options.cpp  test_polymorphic.cpp
CMake/: add_executables_glob_sources.cmake
Examples/: ex01_minimal_usage.cpp  ex01a_minimal_usage_no_default.cpp  ex02a_option_list.cpp  ex02b_option_list.cpp  ex03_override_attribute.cpp  ex04_validity_check.cpp  ex05_accessing_other_options.cpp  exX_polymorphic.cpp
Tests/: CMakeLists.txt  test_options.cpp  test_polymorphic.cpp
